--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,3 +5,7 @@ repos:
   - id: check-yaml
   - id: end-of-file-fixer
   - id: trailing-whitespace
+- repo: https://github.com/nix-community/nixpkgs-fmt
+  rev: v1.3.0
+  hooks:
+  - id: nixpkgs-fmt
